# snippet-manager

./: .gitignore  README.md  pyproject.toml  setup.py  snippet_manager.py  snippet_settings.json
snippets/: Description of style.txt  QT APP.txt
