[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SnippetManager"
version = "0.004"
description = "A modern, light-themed application for managing code snippets and text notes."
readme = "README.md"
authors = [
    { name = "womail", email = "womail@gmail.com" }
]
license = { text = "MIT License" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/snippet-manager"

[tool.setuptools]
packages = ["find:"]

[tool.setuptools.package-data]
"" = ["icons/*.png", "snippet_settings.json"]

[tool.setuptools.entry-points]
console_scripts = [
    "snippet-manager = snippet_manager:main",
] 